# SatelliteDetectionYOLOModel

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  READMEIronBank.md  app.py  external-requirements.txt  hardening_manifest.yaml  main.py  pipeline_vars.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_scenario.sh
Model/: TorchScript.py  YOLO.py  app.py  entities.py  main.py  preprocess.py  settings.py
tests/: conftest.py  test_model.py
